# roadnetworkgenerator

./: .gitignore  CMakeLists.txt  FORMAT_ALL.bat  GENERATE_VS2010.bat  README.md
cmake/: FindCUDA_DLINK.cmake
data/botafogo_bay/: botafogo_bay.config
data/fonts/: arial.glf
data/guanabara_bay/: guanabara_bay.config
data/manhattan/: manhattan.config
data/manhattan_island/: manhattan_island.config
data/rio_de_janeiro_city/: all-maps.psd  rio_de_janeiro_city.config
data/simple/: simple.config
dependencies/: CMakeLists.txt
dependencies/include/: cutil.h  cutil_glm.h  cutil_math.h
dependencies/sqlite/: CMakeLists.txt
include/: Camera.h  Geometry.h  InputController.h  RoadNetworkRenderer.h  Shader.h  StringUtils.h  Texture.h  Transform.h
presentation/configs/: botafogo_bay.config  rio_de_janeiro_city.config
presentation/scripts/: RUN_BATCH_PATTERN.bat
presentation/src/: CMakeLists.txt  main.cpp
scenarios/: ALL_TESTS_VS2010.bat  CLEAR_DUMP.bat  COLLECT_STATISTICS_VS2010.bat  PARALLELISM_RESPONSIVENESS_VS2010.bat  RESPONSIVENESS_TO_PARALLELISM_TESTS_VS2010.bat  SPATIAL_SUBDIVISION_RESPONSIVENESS_TESTS_VS2010.bat  WORK_LOAD_TESTS_VS2010.bat  botafogo_bay_ld_1_gpu.config  botafogo_bay_ld_2_gpu.config  botafogo_bay_ld_3_gpu.config  botafogo_bay_ld_4_gpu.config  botafogo_bay_ld_5_gpu.config  botafogo_bay_pr_10_gpu.config  botafogo_bay_pr_11_gpu.config  botafogo_bay_pr_12_gpu.config  botafogo_bay_pr_1_gpu.config  botafogo_bay_pr_2_gpu.config  botafogo_bay_pr_3_gpu.config  botafogo_bay_pr_4_gpu.config  botafogo_bay_pr_5_gpu.config  botafogo_bay_pr_6_gpu.config  botafogo_bay_pr_7_gpu.config  botafogo_bay_pr_8_gpu.config  botafogo_bay_pr_9_gpu.config  botafogo_bay_sd_1_gpu.config  botafogo_bay_sd_2_gpu.config  botafogo_bay_sd_3_gpu.config  botafogo_bay_sd_4_gpu.config  botafogo_bay_sd_5_gpu.config  botafogo_bay_sd_6_gpu.config  rio_de_janeiro_city_ld_1_gpu.config  rio_de_janeiro_city_ld_2_gpu.config  rio_de_janeiro_city_ld_3_gpu.config  rio_de_janeiro_city_ld_4_gpu.config  rio_de_janeiro_city_ld_5_gpu.config  rio_de_janeiro_city_pr_10_gpu.config  rio_de_janeiro_city_pr_11_gpu.config  rio_de_janeiro_city_pr_12_gpu.config  rio_de_janeiro_city_pr_1_gpu.config  rio_de_janeiro_city_pr_2_gpu.config  (+13 more)
scenarios/dump/: statistics.csv
shaders/: font.fs.glsl  imageMap.fs.glsl  imageMap.vs.glsl  roadnetwork.fs.glsl  roadnetwork.vs.glsl  solid.fs.glsl  solid.vs.glsl
src/: Application.h  Array.cuh  Array.h  BaseGraph.cpp  BaseGraph.cuh  BaseGraph.h  BaseGraphFunctions.cuh  Box2D.cuh  Box2D.h  Branch.cuh  Branch.h  CMakeLists.txt  Camera.h  Circle2D.cuh  Circle2D.h  Collision.h  CollisionDetectionKernel.cuh  Configuration.cpp  Configuration.cuh  Configuration.h  ConfigurationFunctions.h  Constants.h  Context.cuh  ConvexHull.h  CpuGpuCompatibility.h  CpuGpuCompatibilityDefines.h  CudaTexture2DMock.h  Defines.h  Edge.cuh  Edge.h  EvaluateBranch.cpp  EvaluateBranch.cuh  EvaluateRoad.cpp  EvaluateRoad.cuh  ExpansionKernel.cuh  FileReader.h  Geometry.h  GlobalVariables.cpp  GlobalVariables.cuh  GlobalVariables.h  (+83 more)
src/cpu_simulation/: Branch.h  CMakeLists.txt  Circle.h  Config.h  Configuration.cpp  Configuration.h  Defines.h  EvaluateBranch.cpp  EvaluateBranch.h  EvaluateBranchImpl.cpp  EvaluateRoad.cpp  EvaluateRoad.h  EvaluateRoadImpl.cpp  GenericQueue.h  Globals.cpp  Globals.h  HighwayRuleAttributes.h  ImageMap.h  ImageMapQuad.h  InstantiateRoad.cpp  InstantiateRoad.h  InstantiateRoadImpl.cpp  Line.h  Pattern.h  Procedure.h  Procedures.h  ProceduresCodes.h  ProceduresDeclarations.h  Quad.h  QuadTree.h  Road.h  RoadAttributes.h  RoadNetwork.h  RoadNetworkGenerator.h  RoadNetworkGeometry.h  RoadNetworkInputController.h  RoadNetworkLabels.h  RoadNetworkRenderer.h  RoadState.h  RuleAttributes.h  (+13 more)
src/framework/public_headers/: AABB.h  Application.h  Array.h  Box2D.h  Camera.h  Circle2D.h  FileReader.h  Heap.h  InputController.h  Line.h  Line2D.h  MathExtras.h  ParseUtils.h  RingBuffer.h  Shader.h  SortedSet.h  Texture.h
src/gpu_simulation/: CMakeLists.txt  RoadNetworkRenderer.h  gl3w.c  main.cpp
src/road_network_graph/: BaseGraph.cpp  CMakeLists.txt  Graph.cpp  MinimalCycleBasis.cpp  MinimumCycleBasis.cpp  QuadTree.cpp  Vertex.cpp
src/road_network_graph/public_headers/: BaseGraph.h  Defines.h  Edge.h  Graph.h  GraphTraversal.h  MinimalCycleBasis.h  MinimumCycleBasis.h  Primitive.h  QuadTree.h  Quadrant.h  QuadrantEdges.h  StaticHeap.h  Vertex.h
src/roadnetworkgraph/: CMakeLists.txt  Graph.cpp
src/roadnetworkgraph/public_headers/: Defines.h  Edge.h  Graph.h  GraphTraversal.h  QuadTree.h  Quadrant.h  QuadrantEdges.h  Vertex.h
src/vector_math/public_headers/: vector_math.h
statistics/configs/: botafogo_bay_ld_1_gpu.config  botafogo_bay_pr_10_gpu.config  botafogo_bay_pr_11_gpu.config  botafogo_bay_pr_12_gpu.config  botafogo_bay_pr_3_gpu.config  botafogo_bay_pr_4_gpu.config  botafogo_bay_pr_8_gpu.config  botafogo_bay_pw_1_gpu.config  botafogo_bay_pw_2_gpu.config  botafogo_bay_pw_3_gpu.config  botafogo_bay_pw_4_gpu.config  botafogo_bay_pw_5_gpu.config  botafogo_bay_sd_1_gpu.config  botafogo_bay_sd_2_gpu.config  botafogo_bay_sd_3_gpu.config  botafogo_bay_sd_4_gpu.config  botafogo_bay_sd_5_gpu.config  botafogo_bay_sd_6_gpu.config  botafogo_bay_sw_1_gpu.config  botafogo_bay_sw_2_gpu.config  botafogo_bay_sw_3_gpu.config  botafogo_bay_sw_4_gpu.config  botafogo_bay_sw_5_gpu.config  rio_de_janeiro_city_ld_1_gpu.config  rio_de_janeiro_city_ld_2_gpu.config  rio_de_janeiro_city_ld_5_gpu.config  rio_de_janeiro_city_pr_11_gpu.config  rio_de_janeiro_city_pr_12_gpu.config  rio_de_janeiro_city_pr_6_gpu.config  rio_de_janeiro_city_pr_7_gpu.config  rio_de_janeiro_city_pr_9_gpu.config  rio_de_janeiro_city_pw_1_gpu.config  rio_de_janeiro_city_pw_2_gpu.config  rio_de_janeiro_city_pw_3_gpu.config  rio_de_janeiro_city_pw_4_gpu.config  rio_de_janeiro_city_pw_5_gpu.config  rio_de_janeiro_city_sd_1_gpu.config  rio_de_janeiro_city_sd_3_gpu.config  (+6 more)
statistics/src/: CMakeLists.txt  FileReader.h  main.cpp
test/unit_tests/: CMakeLists.txt  MinimalCycleBasisTest.cpp  SortedSetTest.cpp  main.cpp
(+33 files in other folders)
